--- a/reverse_akinator.html
+++ b/reverse_akinator.html
@@ -253,7 +253,7 @@
       "Toaster McGee", "Captain Cactus", "The Moon's Shadow", "Dancing Avocado",
       "Karen, the USB Stick", "Glitchy Pigeon Lord", "Cosmic Burrito",
       "Professor Meowington", "Sir Derp-a-Lot", "The Invisible Unicorn"   ,
-      "The banana peel"
+      "The banana peel","A Dancing Potato", "The WiFi Ghost", "Captain Confetti",
      ];
 
     let usedQuestions = [];
