--- a/reverse_akinator.html
+++ b/reverse_akinator.html
@@ -210,7 +210,7 @@
     const allQuestions = [
       // From both codes
       "Is your character allergic to moonlight?",
-      "Does your character believe in WiFi spirits?",
+      "Does your character bel'ieve in WiFi spirits?",
       "Can your character survive without pizza?",
       "Does your character own a spaceship?",
       "Would your character hug a cactus?",
@@ -221,7 +221,6 @@
       "Are they sponsored by bananas?",
       "Do they use JavaScript to cook?",
       "Have they fought a bear in the metaverse?",
-      "Do they cry during Windows updates?",
       "Have they ever been trapped in a meme?",
       "Can they time travel through dreams?",
       "Is your character allergic to clouds?",
