--- a/reverse_akinator.html
+++ b/reverse_akinator.html
@@ -253,6 +253,7 @@
       "Karen, the USB Stick", "Glitchy Pigeon Lord", "Cosmic Burrito",
       "Professor Meowington", "Sir Derp-a-Lot", "The Invisible Unicorn"   ,
       "The banana peel","A Dancing Potato", "The WiFi Ghost", "Captain Confetti",
+      "The Lost Sock of Destiny", "The WiFi Wizard"
      ];
 
     let usedQuestions = [];
